update to latest stack